force-app/main/default/objects/encompass_By_EM__Loan_Application__c/encompass_By_EM__Loan_Application__c.object-meta.xml
<CustomObject>
    <label>Loan Application</label>
    <nameField>
        <displayFormat>Application-{000000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Loan Applications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>