force-app/main/default/objects/encompass_By_EM__Loan_Application__c/fields/American_Indian_or_Alaska_Native_CB__c.field-meta.xml
<CustomField>
    <fullName>American_Indian_or_Alaska_Native_CB__c</fullName>
    <defaultValue>false</defaultValue>
    <label>American Indian or Alaska Native (CB)</label>
    <type>Checkbox</type>
</CustomField>