force-app/main/default/objects/encompass_By_EM__Loan_Application__c/fields/Asian_Indian__c.field-meta.xml
<CustomField>
    <fullName>Asian_Indian__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Asian Indian</label>
    <type>Checkbox</type>
</CustomField>