force-app/main/default/objects/encompass_By_EM__Loan_Application__c/fields/Black_or_African_AmericanCB__c.field-meta.xml
<CustomField>
    <fullName>Black_or_African_AmericanCB__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Black or African American (CB)</label>
    <type>Checkbox</type>
</CustomField>