force-app/main/default/objects/encompass_By_EM__Loan_Application__c/fields/Borrower__c.field-meta.xml
<CustomField>
    <fullName>Borrower__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Borrower</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Loan Applications</relationshipLabel>
    <relationshipName>Loan_Applications1</relationshipName>
    <type>Lookup</type>
</CustomField>