force-app/main/default/objects/encompass_By_EM__Loan_Application__c/fields/Borrower_Sex__c.field-meta.xml
<CustomField>
    <fullName>Borrower_Sex__c</fullName>
    <label>Borrower Sex</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Male</fullName>
            </value>
            <value>
                <fullName>Female</fullName>
            </value>
            <value>
                <fullName>Do not wish to designate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>