force-app/main/default/objects/encompass_By_EM__Loan_Application__c/fields/CoBorrower__c.field-meta.xml
<CustomField>
    <fullName>CoBorrower__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CoBorrower</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Loan Applications (CoBorrower)</relationshipLabel>
    <relationshipName>Loan_Applications2</relationshipName>
    <type>Lookup</type>
</CustomField>