force-app/main/default/objects/encompass_By_EM__Loan_Application__c/fields/CoBorrower_FICO__c.field-meta.xml
<CustomField>
    <fullName>CoBorrower_FICO__c</fullName>
    <label>CoBorrower FICO</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>