force-app/main/default/objects/encompass_By_EM__Loan_Application__c/fields/CoBorrower_Sex__c.field-meta.xml
<CustomField>
    <fullName>CoBorrower_Sex__c</fullName>
    <label>CoBorrower Sex</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Male</fullName>
            </value>
            <value>
                <fullName>Female</fullName>
            </value>
            <value>
                <fullName>Do Not Wish to designate.</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>