force-app/main/default/objects/encompass_By_EM__Loan_Application__c/fields/CoBorrowerHispanicorLatino__c.field-meta.xml
<CustomField>
    <fullName>CoBorrowerHispanicorLatino__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hispanic or Latino CB</label>
    <type>Checkbox</type>
</CustomField>