force-app/main/default/objects/encompass_By_EM__Loan_Application__c/fields/Do_not_wish_to_provide_ethnicity_cb__c.field-meta.xml
<CustomField>
    <fullName>Do_not_wish_to_provide_ethnicity_cb__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Do not wish to provide ethnicity (CB)</label>
    <type>Checkbox</type>
</CustomField>