force-app/main/default/objects/encompass_By_EM__Loan_Application__c/fields/encompass_By_EM__Borrower_Dependent_Ages__c.field-meta.xml
<CustomField>
    <fullName>encompass_By_EM__Borrower_Dependent_Ages__c</fullName>
    <label>Borrower Dependent Ages</label>
    <length>25</length>
    <type>Text</type>
</CustomField>