force-app/main/default/objects/encompass_By_EM__Loan_Application__c/fields/encompass_By_EM__Borrower_Email__c.field-meta.xml
<CustomField>
    <fullName>encompass_By_EM__Borrower_Email__c</fullName>
    <label>Borrower Email</label>
    <type>Email</type>
</CustomField>