force-app/main/default/objects/encompass_By_EM__Loan_Application__c/fields/encompass_By_EM__Borrower_First_Name__c.field-meta.xml
<CustomField>
    <fullName>encompass_By_EM__Borrower_First_Name__c</fullName>
    <label>Borrower First Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>