force-app/main/default/objects/encompass_By_EM__Loan_Application__c/fields/encompass_By_EM__Borrower_Middle_Name__c.field-meta.xml
<CustomField>
    <fullName>encompass_By_EM__Borrower_Middle_Name__c</fullName>
    <label>Borrower Middle Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>