force-app/main/default/objects/encompass_By_EM__Loan_Application__c/fields/encompass_By_EM__Borrower_Mobile_Phone__c.field-meta.xml
<CustomField>
    <fullName>encompass_By_EM__Borrower_Mobile_Phone__c</fullName>
    <label>Borrower Mobile Phone</label>
    <type>Phone</type>
</CustomField>