force-app/main/default/objects/encompass_By_EM__Loan_Application__c/fields/encompass_By_EM__Borrower_Pair_Index__c.field-meta.xml
<CustomField>
    <fullName>encompass_By_EM__Borrower_Pair_Index__c</fullName>
    <label>Borrower Pair Index</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>