force-app/main/default/objects/encompass_By_EM__Loan_Application__c/fields/encompass_By_EM__CoBorrower_BirthDate__c.field-meta.xml
<CustomField>
    <fullName>encompass_By_EM__CoBorrower_BirthDate__c</fullName>
    <label>CoBorrower BirthDate</label>
    <type>Date</type>
</CustomField>