force-app/main/default/objects/encompass_By_EM__Loan_Application__c/fields/encompass_By_EM__CoBorrower_Dependent_Ages__c.field-meta.xml
<CustomField>
    <fullName>encompass_By_EM__CoBorrower_Dependent_Ages__c</fullName>
    <label>CoBorrower Dependent Ages</label>
    <length>20</length>
    <type>Text</type>
</CustomField>