force-app/main/default/objects/encompass_By_EM__Loan_Application__c/fields/encompass_By_EM__CoBorrower_Dependent_Count__c.field-meta.xml
<CustomField>
    <fullName>encompass_By_EM__CoBorrower_Dependent_Count__c</fullName>
    <label>CoBorrower Dependent Count</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>