force-app/main/default/objects/encompass_By_EM__Loan_Application__c/fields/encompass_By_EM__CoBorrower_Marital_Status__c.field-meta.xml
<CustomField>
    <fullName>encompass_By_EM__CoBorrower_Marital_Status__c</fullName>
    <label>CoBorrower Marital Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Married</fullName>
            </value>
            <value>
                <fullName>Unmarried</fullName>
            </value>
            <value>
                <fullName>Separated</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>