force-app/main/default/objects/encompass_By_EM__Loan_Application__c/fields/encompass_By_EM__Encompass_Application_Id__c.field-meta.xml
<CustomField>
    <fullName>encompass_By_EM__Encompass_Application_Id__c</fullName>
    <externalId>true</externalId>
    <label>Encompass Application Id</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>