force-app/main/default/objects/encompass_By_EM__Loan_Application__c/fields/encompass_By_EM__Opportunity__c.field-meta.xml
<CustomField>
    <fullName>encompass_By_EM__Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Loan Applications</relationshipLabel>
    <relationshipName>Loan_Applications</relationshipName>
    <type>Lookup</type>
</CustomField>