force-app/main/default/objects/encompass_By_EM__Loan_Application__c/fields/Ethnicity_Information_Not_Provided_CB__c.field-meta.xml
<CustomField>
    <fullName>Ethnicity_Information_Not_Provided_CB__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ethnicity Information Not Provided (CB)</label>
    <type>Checkbox</type>
</CustomField>