force-app/main/default/objects/encompass_By_EM__Loan_Application__c/fields/Ethnicity_Not_Applicable__c.field-meta.xml
<CustomField>
    <fullName>Ethnicity_Not_Applicable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ethnicity Not Applicable</label>
    <type>Checkbox</type>
</CustomField>