force-app/main/default/objects/encompass_By_EM__Loan_Application__c/fields/Ethnicity_Not_Applicable_CB__c.field-meta.xml
<CustomField>
    <fullName>Ethnicity_Not_Applicable_CB__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ethnicity Not Applicable (CB)</label>
    <type>Checkbox</type>
</CustomField>