force-app/main/default/objects/encompass_By_EM__Loan_Application__c/fields/Filipino__c.field-meta.xml
<CustomField>
    <fullName>Filipino__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Filipino</label>
    <type>Checkbox</type>
</CustomField>