force-app/main/default/objects/encompass_By_EM__Loan_Application__c/fields/Filipino_CB__c.field-meta.xml
<CustomField>
    <fullName>Filipino_CB__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Filipino (CB)</label>
    <type>Checkbox</type>
</CustomField>