force-app/main/default/objects/encompass_By_EM__Loan_Application__c/fields/Guamanian_or_Chamorro_CB__c.field-meta.xml
<CustomField>
    <fullName>Guamanian_or_Chamorro_CB__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Guamanian or Chamorro (CB)</label>
    <type>Checkbox</type>
</CustomField>