force-app/main/default/objects/encompass_By_EM__Loan_Application__c/fields/Hawaiian_or_Other_Pacfic_Islander_CB__c.field-meta.xml
<CustomField>
    <fullName>Hawaiian_or_Other_Pacfic_Islander_CB__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hawaiian or Other Pacfic Islander CB</label>
    <type>Checkbox</type>
</CustomField>