force-app/main/default/objects/encompass_By_EM__Loan_Application__c/fields/Hispanic_Latino_Other__c.field-meta.xml
<CustomField>
    <fullName>Hispanic_Latino_Other__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hispanic or Latino - Other</label>
    <type>Checkbox</type>
</CustomField>