force-app/main/default/objects/encompass_By_EM__Loan_Application__c/fields/Hispanic_Or_Latino_Other_CB__c.field-meta.xml
<CustomField>
    <fullName>Hispanic_Or_Latino_Other_CB__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hispanic Or Latino - Other (CB)</label>
    <type>Checkbox</type>
</CustomField>