force-app/main/default/objects/encompass_By_EM__Loan_Application__c/fields/HispanicorLatino__c.field-meta.xml
<CustomField>
    <fullName>HispanicorLatino__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hispanic or Latino</label>
    <type>Checkbox</type>
</CustomField>