force-app/main/default/objects/encompass_By_EM__Loan_Application__c/fields/I_do_not_wish_to_Provide_Ethnicity__c.field-meta.xml
<CustomField>
    <fullName>I_do_not_wish_to_Provide_Ethnicity__c</fullName>
    <defaultValue>false</defaultValue>
    <label>I do not wish to provide Ethnicity</label>
    <type>Checkbox</type>
</CustomField>