force-app/main/default/objects/encompass_By_EM__Loan_Application__c/fields/Japanese_CB__c.field-meta.xml
<CustomField>
    <fullName>Japanese_CB__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Japanese (CB)</label>
    <type>Checkbox</type>
</CustomField>