force-app/main/default/objects/encompass_By_EM__Loan_Application__c/fields/Mexican__c.field-meta.xml
<CustomField>
    <fullName>Mexican__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Mexican</label>
    <type>Checkbox</type>
</CustomField>