force-app/main/default/objects/encompass_By_EM__Loan_Application__c/fields/Mexican_CB__c.field-meta.xml
<CustomField>
    <fullName>Mexican_CB__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Mexican (CB)</label>
    <type>Checkbox</type>
</CustomField>