force-app/main/default/objects/encompass_By_EM__Loan_Application__c/fields/Native_Hawaiian_or_Other_Pacfic_Islander__c.field-meta.xml
<CustomField>
    <fullName>Native_Hawaiian_or_Other_Pacfic_Islander__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Native Hawaiian or Other Pacfic Islander</label>
    <type>Checkbox</type>
</CustomField>