force-app/main/default/objects/encompass_By_EM__Loan_Application__c/fields/Other_Asian_CB__c.field-meta.xml
<CustomField>
    <fullName>Other_Asian_CB__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Other Asian (CB)</label>
    <type>Checkbox</type>
</CustomField>