force-app/main/default/objects/encompass_By_EM__Loan_Application__c/fields/Other_Pacfic_Islander__c.field-meta.xml
<CustomField>
    <fullName>Other_Pacfic_Islander__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Other Pacfic Islander</label>
    <type>Checkbox</type>
</CustomField>