force-app/main/default/objects/encompass_By_EM__Loan_Application__c/fields/Puerto_Rican__c.field-meta.xml
<CustomField>
    <fullName>Puerto_Rican__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Puerto Rican</label>
    <type>Checkbox</type>
</CustomField>