force-app/main/default/objects/encompass_By_EM__Loan_Application__c/fields/Race_I_do_not_wish_to_provide_CB__c.field-meta.xml
<CustomField>
    <fullName>Race_I_do_not_wish_to_provide_CB__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Race: I do not wish to provide (CB)</label>
    <type>Checkbox</type>
</CustomField>