force-app/main/default/objects/encompass_By_EM__Loan_Application__c/fields/Samoan__c.field-meta.xml
<CustomField>
    <fullName>Samoan__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Samoan</label>
    <type>Checkbox</type>
</CustomField>