force-app/main/default/objects/encompass_By_EM__Loan_Application__c/fields/Vietnamese__c.field-meta.xml
<CustomField>
    <fullName>Vietnamese__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Vietnamese</label>
    <type>Checkbox</type>
</CustomField>