force-app/main/default/objects/encompass_By_EM__Loan_Application__c/fields/White__c.field-meta.xml
<CustomField>
    <fullName>White__c</fullName>
    <defaultValue>false</defaultValue>
    <label>White</label>
    <type>Checkbox</type>
</CustomField>