force-app/main/default/objects/encompass_By_EM__Loan_Application__c/fields/White_CB__c.field-meta.xml
<CustomField>
    <fullName>White_CB__c</fullName>
    <defaultValue>false</defaultValue>
    <label>White (CB)</label>
    <type>Checkbox</type>
</CustomField>