force-app/main/default/objects/encompass_By_EM__Loan_Application__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>encompass_By_EM__Opportunity__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Sequence__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>encompass_By_EM__Borrower_Last_Name__c</columns>
    <columns>encompass_By_EM__Borrower_First_Name__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>